# TheCopilots

./: .claudeignore  .gitignore  CLAUDE.md  vm_merge.md
backend/: CLAUDE.md  pyproject.toml
backend/api/: main.py  routes.py  schemas.py  streaming.py
backend/brain/: database.py  lookup.py  manufacturing.py
backend/models/: embedder.py  freecad_client.py  freecad_extraction.py  gemma.py  mlx_vlm_client.py  mock_cad_contexts.py  prompts.py  techdraw_generator.py
backend/tests/: test_database.py  test_embedder.py  test_feature_merge.py  test_freecad_client.py  test_gemma.py  test_lookup.py  test_manufacturing.py  test_mlx_vlm_client.py  test_mock_cad_contexts.py  test_prompts.py  test_routes.py  test_schemas.py  test_streaming.py  test_techdraw_generator.py
data/: CLAUDE.md  brain.db
data/embeddings/: standards_embeddings.npz
data/standards/: asme_y14_5.json  datum_patterns.json  material_properties.json  tolerance_tables.json
data/synthetic/: generation_log.jsonl  generation_prompts.txt  training_pairs.jsonl
docs/: Architecture.md  GDT-formatting.md  Overview.md  PRD.md  demo-priorities.md  edge-constraints.md
docs/plans/: 2026-02-28-architecture-changes.md  2026-02-28-backend-pipeline.md  2026-02-28-frontend-design.md  2026-02-28-frontend-implementation.md
frontend/: CLAUDE.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
scripts/: CLAUDE.md  embed_standards.py  finetune_classifier.py  generate_synthetic_data.py  healthcheck.py  seed_database.py  test_api_stream.py  test_vlm_direct.py  validate_pipeline.py
(+12 files in other folders)
